# library_management

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  auth.py  config.py  database.py  deps.py  docker-compose.yml  exceptions.py  init_db.py  main.py  models.py  pyproject.toml  pytest.ini  schemas.py  security.py  test-docker-compose.yml  user_service.py  utils.py
book/: author_routes.py  author_service.py  book_routes.py  book_service.py  borrowing_routes.py  borrowing_service.py
migrations/: env.py
migrations/versions/: b77244b943e2_user_role.py  d403f2a3edba_book_and_author.py  ed244e802c39_initial_migration.py  ff5a1a8c4e52_borrowing.py
tests/: conftest.py  mock_authors.json  mock_books.json  mock_users.json
tests/integration_tests/: test_borrowing.py
tests/unit_tests/: test_author.py  test_book.py  test_filter_book.py  test_user.py
user/: auth.py  role_checker.py  security.py  user_routes.py  user_service.py
