[tool.poetry]
name = "library-management"
version = "0.1.0"
description = ""
authors = ["Kamo develop <kamodeveloper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
environs = "^14.1.0"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.20"
bcrypt = "^4.2.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
httpx = "^0.28.1"
coverage = "^7.6.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
